# RISC-V-DickAssGambler

./: .gitignore  CMakeLists.txt  ElfHeader.h  ElfHeaderIdent.h  README.md  bit_utils.h  file_utils.h  formatting_utils.cpp  formatting_utils.h  main.cpp  pch.h  string_viewing_utils.h  workflow.h
elf_parsing/: CMakeLists.txt  ElfFile.cpp  ElfFile.h  ElfHeaderIdent.cpp  ElfHeaderIdent.h  ElfSection.cpp  ElfSection.h  ElfSymbol.cpp  ElfSymbol.h  LabeledProgram.cpp  LabeledProgram.h  SymbolTableEntry.cpp  SymbolTableEntry.h  section_header_reader.cpp  section_header_reader.h
generic_utils/: CMakeLists.txt  bit_utils.cpp  bit_utils.h  file_utils.h  formatting_utils.h  generic_utils.cpp  string_viewing_utils.h
generic_utils/coroutine_support/: future.h  generator.h
headers/: ElfHeader.cpp  ElfHeader.h  ElfHeaderIdent.h  SectionHeaderEntry.cpp  SectionHeaderEntry.h  SuctionHeaderEntry.cpp  SuctionHeaderEntry.h
risc_v/: CMakeLists.txt  Instruction.cpp  Instruction.h  InstructionArgument.cpp  InstructionArgument.h  LabeledProgram.cpp  LabeledProgram.h  RV32InstructionDescriptor.h  base_instruction_formatter.cpp  base_instruction_formatter.h  command_parser.cpp  command_parser.h  risc_v_disassembler.cpp  risc_v_disassembler.h  rv32_parser.cpp  rv32_parser.h  rvc_parser.cpp  rvc_parser.h
tests/: CMakeLists.txt  bit_utils_tests.cpp  bit_utils_tests.h  detect_location.h  detect_locations.h  disasm_test.cpp  e_ident_test.cpp  elf_file_tests.cpp  filesystem_tests.cpp  full_header_test.cpp  section_hearer_parsing_test.cpp  single_command_parsing_test.cpp
tests/resources/: test1_assembler_output.txt  test1_disassembler_output.txt  test2_assembler_output.txt  test2_disassembler_output.txt  test_ascii_chars.txt  x64.elf
tests/resources/big_rv32/: big_rv32.elf  testee_output.txt
tests/resources/rvc/: rvc.elf  testee_output.txt
tests/resources/simplest/: testee_output.txt
